--- a/Ques_Website/index.html
+++ b/Ques_Website/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/logo.ico" />
+    <link rel="icon" type="image/png" sizes="1632x1632" href="/logo.png?v=2" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/logo.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&family=Rajdhani:wght@500;600;700&display=swap" rel="stylesheet">
@@ -10,6 +12,17 @@
     
     <!-- SEO Meta Tags -->
     <title>Ques - Building the OSINT Layer of AI Infrastructure | 快索科技</title>
+    
+    <!-- Structured Data for Organization -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "url": "https://quesx.com",
+        "logo": "https://quesx.com/logo.png",
+        "name": "Ques Technology"
+      }
+    </script>
     <meta name="description" content="Shenzhen Ques Technology Co., Ltd. - Pioneering next-generation OSINT tools for AI. Featuring GeoSeer, our AI-powered image geolocation platform with cutting-edge accuracy." />
     <meta name="keywords" content="OSINT, AI Infrastructure, GeoSeer, Geolocation, Open Source Intelligence, AI Tools, Shenzhen Ques Technology" />
     <meta name="author" content="Shenzhen Ques Technology Co., Ltd." />
