--- a/Ques_Website/index.html
+++ b/Ques_Website/index.html
@@ -2,7 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" sizes="1632x1632" href="/logo.png?v=2" />
+    
+    <!-- Favicons - Multiple sizes for browser and Google compatibility -->
+    <link rel="icon" type="image/x-icon" href="/logo.ico" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/logo.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/logo.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="/logo.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/logo.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/logo.png" />
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -50,6 +56,7 @@
     <meta name="theme-color" content="#020617" />
     <link rel="alternate" hreflang="en" href="https://quesx.com/" />
     <link rel="alternate" hreflang="zh-CN" href="https://quesx.com/" />
+    <link rel="alternate" hreflang="x-default" href="https://quesx.com/" />
   </head>
   <body>
     <div id="root"></div>
