--- a/Ques_Website/index.html
+++ b/Ques_Website/index.html
@@ -24,9 +24,32 @@
       {
         "@context": "https://schema.org",
         "@type": "Organization",
-        "url": "https://quesx.com",
+        "url": "https://quesx.com/",
         "logo": "https://quesx.com/logo.png",
         "name": "Ques Technology"
+      }
+    </script>
+    
+    <!-- Structured Data for Video -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "VideoObject",
+        "name": "GeoSeer AI Demo - Image Geolocation Platform",
+        "description": "Watch GeoSeer in action - our AI-powered image geolocation platform that uses cutting-edge machine learning to identify locations from uploaded images with unprecedented accuracy.",
+        "thumbnailUrl": "https://quesx.com/demo-thumbnail.png",
+        "uploadDate": "2026-01-08",
+        "duration": "PT42S",
+        "contentUrl": "https://quesx.com/demo.mp4",
+        "embedUrl": "https://quesx.com/#products-demo",
+        "publisher": {
+          "@type": "Organization",
+          "name": "Ques Technology",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://quesx.com/logo.png"
+          }
+        }
       }
     </script>
     <meta name="description" content="Shenzhen Ques Technology Co., Ltd. - Pioneering next-generation OSINT tools for AI. Featuring GeoSeer, our AI-powered image geolocation platform with cutting-edge accuracy." />
